--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -169,19 +169,19 @@
     <Compile Include="Modeling\ValidateInverseSolution.cs" />
     <Compile Include="MonteCarlo\BidirectionalScattering\AnalogBidirectionalTallyActionsTests.cs" />
     <Compile Include="MonteCarlo\BidirectionalScattering\BidirectionalAnalyticSolutions.cs" />
-    <Compile Include="MonteCarlo\DataStructures\InputTests.cs" />
-    <Compile Include="MonteCarlo\Detectors\DetectorInputTests.cs" />
-    <Compile Include="MonteCarlo\Detectors\OutputTests.cs" />
-    <Compile Include="MonteCarlo\Detectors\pMCDetectorInputTests.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SimulationInputTests.cs" />
+    <Compile Include="MonteCarlo\DataStructures\DetectorInputs\DetectorInputTests.cs" />
+    <Compile Include="MonteCarlo\DataStructures\OutputTests.cs" />
+    <Compile Include="MonteCarlo\DataStructures\DetectorInputs\pMCDetectorInputTests.cs" />
     <Compile Include="MonteCarlo\MonteCarloFactoriesTests.cs" />
     <Compile Include="MonteCarlo\PostProcessing\PostProcessingTests.cs" />
     <Compile Include="MonteCarlo\Sources\CustomPointSourceTests.cs" />
-    <Compile Include="MonteCarlo\TallyActions\AnalogTallyActionsTests.cs" />
-    <Compile Include="MonteCarlo\TallyActions\CAWTallyActionsTests.cs" />
-    <Compile Include="MonteCarlo\TallyActions\CAWTwoLayerTallyActionsTests.cs" />
-    <Compile Include="MonteCarlo\TallyActions\DAWTwoLayerTallyActionsTests.cs" />
-    <Compile Include="MonteCarlo\TallyActions\pMCTallyActionsTests.cs" />
-    <Compile Include="MonteCarlo\TallyActions\DAWTallyActionsTests.cs" />
+    <Compile Include="MonteCarlo\Detectors\AnalogTallyActionsTests.cs" />
+    <Compile Include="MonteCarlo\Detectors\CAWTallyActionsTests.cs" />
+    <Compile Include="MonteCarlo\Detectors\CAWTwoLayerTallyActionsTests.cs" />
+    <Compile Include="MonteCarlo\Detectors\DAWTwoLayerTallyActionsTests.cs" />
+    <Compile Include="MonteCarlo\Detectors\pMCTallyActionsTests.cs" />
+    <Compile Include="MonteCarlo\Detectors\DAWTallyActionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\ArrayExtensionsTests.cs" />
   </ItemGroup>
