--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -193,7 +193,6 @@
     <Compile Include="Modeling\ForwardSolvers\INurbs.cs" />
     <Compile Include="Modeling\ForwardSolvers\LinearDiscreteFourierTransform.cs" />
     <Compile Include="Modeling\ForwardSolvers\LinearDiscreteHankelTransform.cs" />
-    <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\Boundary.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\DataStructures\AngularMesh.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\DataStructures\BoundaryCoupling.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\DataStructures\LightSource.cs" />
@@ -201,10 +200,10 @@
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\DataStructures\SpatialMesh.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\IO\Initialization.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\IO\ParametersIO.cs" />
+    <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\IO\ReadDataFiles.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\MultiGridCycle.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\DataStructures\Output.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\DataStructures\Parameters.cs" />
-    <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\Reflect.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\Solver.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\IO\Source.cs" />
     <Compile Include="Modeling\ForwardSolvers\MonteCarloForwardSolver.cs" />
