Added default constructors and constructor comments to Detectors. Renamed pMuaMusXXXDetector(s) to pMCMuaMusXXXDetector(s) for future-compatibility with auto-mapping from DetectorInputs to Detectors to DetectorOutputs
--HG--
branch : dc-110309-detector_output_tally_refactoring

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -664,6 +664,9 @@
     <Compile Include="..\Vts\MonteCarlo\Interfaces\ITissueRegion.cs">
       <Link>MonteCarlo\Interfaces\ITissueRegion.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\IO\DetectorIO.cs">
+      <Link>MonteCarlo\IO\DetectorIO.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\mc_allvox.cs">
       <Link>MonteCarlo\mc_allvox.cs</Link>
     </Compile>
