Add 1) Angular sampling 2)Position sampling (uniform and normal) to SourceToolBox
--HG--
branch : dc-110311-source_restructuring

--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -285,8 +285,10 @@
     <Compile Include="MonteCarlo\PostProcessing\PhotonTerminationDatabasePostProcessor.cs" />
     <Compile Include="Common\Extension Methods\RNGExtensions.cs" />
     <Compile Include="MonteCarlo\Sources\CollimatedLineSource.cs" />
+    <Compile Include="MonteCarlo\Sources\CustomPointSourceNew.cs" />
     <Compile Include="MonteCarlo\Sources\CustomPointSourceInput.cs" />
     <Compile Include="MonteCarlo\Sources\IsotropicLineSource.cs" />
+    <Compile Include="MonteCarlo\Sources\IsotropicPointSourceNew.cs" />
     <Compile Include="MonteCarlo\Sources\LineSourceBase.cs" />
     <Compile Include="MonteCarlo\Sources\CollimatedRectangularSource.cs" />
     <Compile Include="MonteCarlo\Sources\CustomPointSource.cs" />
